kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-server
  namespace: tcp-echo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: tcp-echo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tcp-echo-server
    spec:
      containers:
      - image: andrescaroc/server:e96343ac
        name: tcp-echo-container
        ports:
        - name: tcp-port
          containerPort: 8080
          protocol: TCP
