kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-server
  namespace: tcp-echo
spec:
  selector:
    app.kubernetes.io/name: tcp-echo-server
  ports:
  - name: tcp-port
    protocol: TCP
    port: 8085
    targetPort: tcp-port
